Added auth and description
