# controllers/AuthService.js
@@ -1,16 +1,15 @@
 'use strict';
 
-exports.sourcesSearchGet = function(args, res, next) {
+exports.authPost = function(args, res, next) {
   /**
    * parameters expected in the args:
-  * query (String)
-  * sourceIds (List)
-  * created (Date)
-  * updated (Date)
   **/
   
   
   var examples = {};
+  examples['application/json'] = {
+  "token" : "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWV9.TJVA95OrM7E2cBab30RMHrHDcEfxjoYZgeFONFh7HgQ"
+};
   
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
